--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2001-03-02  shawn  <sabetts@diggin.lamenet.tmp>
+
+	* doc/ratpoison.texi: minor updates.
+
+	* man/ratpoison.1: added changes from texinfo docs.
+
 2001-03-01  shawn  <sabetts@diggin.lamenet.tmp>
 
 	* doc/ratpoison.texi (Commands): filled in remaining commands and
