* main.c (print_version): updated copyright notice.
* doc/Makefile.am (EXTRA_DIST): man page comes with the distro.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2001-03-02  shawn  <sabetts@diggin.lamenet.tmp>
 
+	* doc/Makefile.am (EXTRA_DIST): man page comes with the distro.
+
 	* Makefile.am (SUBDIRS): removed man/
 
 	* configure.in (AC_OUTPUT): removed man/Makefile
