--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ratpoison (0.1.1-1) unstable; urgency=low
+
+  * New upstream release.
+
+ -- Gergely Nagy <8@free.bsd.hu>  Tue,  6 Mar 2001 19:36:45 +0100
+
 ratpoison (0.1.0-1) unstable; urgency=low
 
   * New upstream release.
