--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,5 +1,8 @@
 2001-03-07  Ryan Yeske  <rcyeske@cut.hotdog.tmp>
 
+	* main.c (read_rc_file): Fix typo that was resulting in exhausting
+	all memory parsing the rc file.
+
 	* actions.c (string_to_keysym): New function.
 	(parse_keydesc): Call string_to_keysym.
 
