--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ratpoison (0.1.1-2) unstable; urgency=low
+
+  * Build-Depend on x-terminal-emulator. (Closes: Bug#89272)
+
+ -- Gergely Nagy <8@free.bsd.hu>  Sun, 11 Mar 2001 18:22:21 +0100
+
 ratpoison (0.1.1-1) unstable; urgency=low
 
   * New upstream release.
