* src/conf.h: replaced the silly c++ style comment around HIDE_MOUSE with a REAL comment.
* src/manage.c (update_window_information): updates the window's
border width.

* src/conf.h (WINDOW_BORDER_WIDTH): new constant

* src/manage.c (maximize_normal): Set the border width to
WINDOW_BORDER_WIDTH. takes the border width into account when
calculating the position, width, and height.
(maximize_transient): likewise
(maximize): calls XSetWindowBorderWidth to set the window's border
width.
(force_maximize): likewise

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,10 @@
 ratpoison NEWS --- history of user-visible changes.  -*- outline -*-
 
 * Changes since 0.1.0
+** window borders are configurable
+WINDOW_BORDER_WIDTH has been added to conf.h. This constant determines
+the border width for all windows.
+
 ** Window list changes
 A '+' is now drawn between the window number and the window name for
 the last accessed window.
@@ -44,7 +48,7 @@ When the auto close feature is enabled, ratpoison will exit when the
 last managed window is closed. This feature can be turned on by
 uncommenting the line:
 
-//#define AUTO_CLOSE
+/* #define AUTO_CLOSE */
 
 in conf.h
 
