add banish to user_commands. (cmd_banish): New function.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2001-04-04  Ryan Yeske  <rcyeske@cut.hotdog.tmp>
+
+	* src/actions.c: add banish to user_commands.
+	(cmd_banish): New function.
+
 2001-04-01  shawn  <sabetts@diggin.lamenet.tmp>
 
 	* src/manage.c (maximize_normal): fixed maximizing problems for
